tests/fixtures/invalid/missing-required-field.nml
// This service is missing the required 'localMount' field
service IncompleteService:
    |allow = [@public]
